# combine-run-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
scripts/: smoke_test.py
src/combine_run_mcp/: __init__.py  cli.py  config.py  nomenclature.py  sandbox.py  server.py
src/combine_run_mcp/tools/: __init__.py  run.py
tests/: conftest.py  test_config.py  test_run_tool.py  test_sandbox.py
