[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "combine-run-mcp"
authors = [
  { name = "Massimiliano Galli", email = "massimiliano.galli.95@gmail.com" },
]
description = "MCP server for executing CMS Combine commands (local stdio and remote CERN PaaS)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.0",
]

[project.scripts]
combine-run-mcp = "combine_run_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/maxgalli/combine-run-mcp"
"Bug Tracker" = "https://github.com/maxgalli/combine-run-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/combine_run_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch]
version.path = "src/combine_run_mcp/__init__.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]

[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
  "pytest-asyncio >=0.24",
]
dev = [
  { include-group = "test" },
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "slow: marks tests as slow (skipped by default, use --runslow to run)",
]
asyncio_mode = "auto"


[tool.coverage]
run.source = ["combine_run_mcp"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "combine_run_mcp.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG", "B", "BLE", "C4", "DTZ", "EM", "EXE", "FA", "FLY", "FURB",
  "G", "I", "ICN", "ISC", "LOG", "PERF", "PGH", "PIE", "PL", "PT",
  "PTH", "PYI", "Q", "RET", "RSE", "RUF", "SIM", "SLOT", "T10",
  "T20", "TC", "TRY", "UP", "YTT",
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "S"]


[tool.pylint]
py-version = "3.10"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "broad-exception-caught",
  "design",
  "duplicate-code",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
